--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -126,7 +126,7 @@ jobs:
         if: ${{ inputs.zkverify_version != '' }}
         run: |
           ./setup.sh --fetch-latest --rebuild \
-            --zkverify-branch ${{ inputs.zkverify_version || github.event.inputs.zkverify_version }} \
+            --zkverify-version ${{ inputs.zkverify_version || github.event.inputs.zkverify_version }} \
             --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }} \
             --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }} \
             --docker-image-tag ${{ env.SANITIZED_ZKVERIFY_VERSION }}
@@ -143,12 +143,11 @@ jobs:
             --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
         working-directory: src/e2e-tests
 
-      ## revisit for both conditions
       - name: Set Up Docker Containers
         run: |
           docker compose down -v
-          ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION }} docker compose build --no-cache
-          ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION }} docker compose up -d
+          ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag || github.event.inputs.zkverify_docker_tag }} docker compose build --no-cache
+          ZKVERIFY_IMAGE_TAG=${{ env.SANITIZED_ZKVERIFY_VERSION || inputs.zkverify_docker_tag || github.event.inputs.zkverify_docker_tag }} docker compose up -d
         working-directory: src/e2e-tests
 
       - name: Wait for Ethereum contract to be deployed
