--- a/.github/workflows/CI-e2e-tests.yml
+++ b/.github/workflows/CI-e2e-tests.yml
@@ -65,6 +65,7 @@ jobs:
             exit 1
           else
             echo "Validation passed. Proceeding with the workflow."
+          fi
 
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -142,6 +143,12 @@ jobs:
             --nh-attestation-bot-branch ${{ inputs.attestation_bot_branch || github.event.inputs.attestation_bot_branch }} \
             --zkv-attestation-contracts-branch ${{ inputs.zkv_contracts_branch || github.event.inputs.zkv_contracts_branch }}
         working-directory: src/e2e-tests
+
+      - name: Upload Docker Image Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: zkverify-image
+          path: zkverify-image.tar
 
       - name: Set Up Docker Containers
         run: |
